# castella

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  attacks.cpp  attacks.h  bitboard.h  game.cpp  game.h  history.cpp  history.h  main.cpp  move_order.cpp  move_order.h  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h  str_util.h  time_mgr.cpp  time_mgr.h  tt.h  types.cpp  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/eval/: eval.cpp  eval.h
tests/: CMakeLists.txt  attacks.test.cpp  game.test.cpp  main.test.cpp  move_order.test.cpp  movegen.test.cpp  test_util.h  types.test.cpp  zobrist.test.cpp
